# InstantCrack

./: .gitignore  LICENSE  README.md
api/: Cargo.toml  README.md  manage_algos.py
api/src/: db.rs  main.rs  modules.rs
api/static/: index.html
ingestor/: Makefile  README.md  ingestor
ingestor/include/: ingestor.h  lmdb_wrap.h  loader.h  module.h  wordlist.h  worker.h
ingestor/modules/: Makefile  README.md  md5.c  ntlm.c  sha1.c
ingestor/src/: ingestor.c  lmdb.c  loader.c  main.c  wordlist.c  worker.c
